--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
   <!-- jQuery -->
   <script src="asset/jquery-3.6.0.min.js"></script>
-
+  <style>
+    .floatLeft,.floatBottom.floatRight{opacity: 0;}
+  </style>
   <!-- Tailwind Config -->
   <script>
     tailwind.config = {
@@ -96,7 +98,7 @@
   <!-- Navbar -->
   <div id="loader" class="flex items-center justify-center h-[100vh] w-[100%] bg-white fixed z-100">
     <div class="flex items-center justify-center flex-col">
-      <img src="asset/loading.png" alt="" width="100">
+      <img loading="lazy" src="asset/loading.png" alt="" width="100">
       <div class="fill-line"><span></span></div>
     </div>
   </div>
@@ -291,13 +293,13 @@
               <div class="relative w-72 h-72 md:w-96 md:h-96 rounded-full p-1 neon-border overflow-hidden zoomIn"
                 id="imageContainer">
                 <div class="absolute inset-0 bg-gradient-to-br from-primary to-secondary opacity-10 rounded-full"></div>
-                <img src="asset/fahim-rashid.png" alt="Fahim Rashid" id="floatingImage"
+                <img loading="lazy" src="asset/fahim-rashid.png" alt="Fahim Rashid" id="floatingImage"
                   class="shape rounded-full w-full h-full object-cover" />
               </div>
 
               <!-- <div class="relative w-72 h-72 md:w-96 md:h-96 overflow-hidden zoomIn"
                 id="imageContainer">
-                <img src="asset/fh.png" alt="" id="floatingImage">
+                <img loading="lazy" src="asset/fh.png" alt="" id="floatingImage">
               </div> -->
 
 
@@ -354,7 +356,7 @@
           <div class="lg:w-2/5 fadeOut">
             <div class="relative">
               <div class="relative z-10 rounded-xl overflow-hidden hidden glass-effect p-2">
-                <img src="asset/fahim rashid.png" alt="About Me" class="rounded-lg w-full h-auto object-cover" />
+                <img loading="lazy" src="asset/fahim rashid.png" alt="About Me" class="rounded-lg w-full h-auto object-cover" />
               </div>
 
               <!-- Decorative elements -->
@@ -367,7 +369,7 @@
             <h3 class="text-2xl font-semibold mb-4 font-poppins">Full Stack Web Developer</h3>
 
             <p class="text-gray-300 mb-6" style="text-indent: 1rem;">
-              I have been working as a Full Stack Web Developer for over three years. Throughout this time, I have
+              I have been working as a Full Stack Web Developer for over <span id="workYears"></span> years. Throughout this time, I have
               developed the ability to create robust and scalable applications using modern technologies.Also I
               specialize in providing web-based software solutions. My journey began with a degree in BSCS.
             </p>
@@ -479,7 +481,7 @@
               <div class="glass-effect p-5 rounded-xl text-center fadeOut">
                 <div
                   class="w-16 h-16 mx-auto mb-4 rounded-full glass-effect flex items-center justify-center text-4xl text-yellow-400">
-                  <img src="asset/php.png" alt="php">
+                  <img loading="lazy" src="asset/php.png" alt="php">
                 </div>
                 <h4 class="font-semibold mb-1">PHP</h4>
               </div>
@@ -495,7 +497,7 @@
               <div class="glass-effect p-5 rounded-xl text-center fadeOut">
                 <div
                   class="w-16 h-16 mx-auto mb-4 rounded-full glass-effect flex items-center justify-center text-4xl text-blue-600">
-                  <img src="asset/django.png" alt="django">
+                  <img loading="lazy" src="asset/django.png" alt="django">
                 </div>
                 <h4 class="font-semibold mb-1">Django</h4>
               </div>
@@ -511,7 +513,7 @@
               <div class="glass-effect p-5 rounded-xl text-center fadeOut">
                 <div
                   class="w-16 h-16 mx-auto mb-4 rounded-full glass-effect flex items-center justify-center text-4xl text-green-500">
-                  <img src="asset/next js.png" alt="next js">
+                  <img loading="lazy" src="asset/next js.png" alt="next js">
                 </div>
                 <h4 class="font-semibold mb-1">NEXT.js</h4>
               </div>
@@ -626,49 +628,49 @@
           <!-- shippo  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/shippo.png" alt="" class="bg-white">
+              <img loading="lazy" src="asset/icon/shippo.png" alt="" class="bg-white">
             </div>
           </div>
           <!-- stripe  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/stripe.png" alt="">
+              <img loading="lazy" src="asset/icon/stripe.png" alt="">
             </div>
           </div>
           <!-- vcita  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/vcita.png" alt="">
+              <img loading="lazy" src="asset/icon/vcita.png" alt="">
             </div>
           </div>
           <!-- tcs  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/tcs.png" alt="">
+              <img loading="lazy" src="asset/icon/tcs.png" alt="">
             </div>
           </div>
           <!-- shopify  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/shopify.png" alt="">
+              <img loading="lazy" src="asset/icon/shopify.png" alt="">
             </div>
           </div>
           <!-- cloud  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/google.jpeg" alt="">
+              <img loading="lazy" src="asset/icon/google.jpeg" alt="">
             </div>
           </div>
           <!-- datatables  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/datatables.png" alt="">
+              <img loading="lazy" src="asset/icon/datatables.png" alt="">
             </div>
           </div>
           <!-- zapier  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/zapier.png" alt="">
+              <img loading="lazy" src="asset/icon/zapier.png" alt="">
             </div>
           </div>
         </div>
@@ -679,55 +681,55 @@
           <!-- tailwind  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/tailwind.png" alt="">
+              <img loading="lazy" src="asset/icon/tailwind.png" alt="">
             </div>
           </div>
           <!-- dpd  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/dpd.png" alt="">
+              <img loading="lazy" src="asset/icon/dpd.png" alt="">
             </div>
           </div>
           <!-- paymob  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/paymobLogo.png" alt="">
+              <img loading="lazy" src="asset/icon/paymobLogo.png" alt="">
             </div>
           </div>
           <!-- zendisk  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/zendesk.png" alt="">
+              <img loading="lazy" src="asset/icon/zendesk.png" alt="">
             </div>
           </div>
           <!-- leopard  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/leopard.jpg" alt="">
+              <img loading="lazy" src="asset/icon/leopard.jpg" alt="">
             </div>
           </div>
           <!-- alflah  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/alfalah.png" alt="">
+              <img loading="lazy" src="asset/icon/alfalah.png" alt="">
             </div>
           </div>
           <!-- wordpress  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/wordpress.png" alt="" class="bg-white">
+              <img loading="lazy" src="asset/icon/wordpress.png" alt="" class="bg-white">
             </div>
           </div>
           <!-- postex  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/postex.png" alt="">
+              <img loading="lazy" src="asset/icon/postex.png" alt="">
             </div>
           </div>
           <!-- twillio  -->
           <div class="infinite-scroll-card">
             <div class="card-content">
-              <img src="asset/icon/twillio.jpg" alt="">
+              <img loading="lazy" src="asset/icon/twillio.jpg" alt="">
             </div>
           </div>
         </div>
@@ -755,9 +757,9 @@
           <div class="glass-effect rounded-xl overflow-hidden hover:border-primary/50 hover:shadow-lg floatLeft">
             <div class="relative h-48 overflow-hidden">
               <div class="edu-logo absolute top-2 right-1">
-                <img src="asset/fuuast logo.png" alt="" width="70" height="70">
+                <img loading="lazy" src="asset/fuuast logo.png" alt="" width="70" height="70">
               </div>
-              <img src="asset/fuuast.jpg" alt="fuuast" class="w-full h-full object-cover" />
+              <img loading="lazy" src="asset/fuuast.jpg" alt="fuuast" class="w-full h-full object-cover" />
               <div class="absolute inset-0 bg-gradient-to-t from-background to-transparent"></div>
               <div class="absolute bottom-4 left-4">
                 <span class="bg-primary/80 text-white text-xs py-1 px-3 rounded-full backdrop-blur-sm">2019 -
@@ -786,9 +788,9 @@
           <div class=" glass-effect rounded-xl overflow-hidden hover:border-primary/50 hover:shadow-lg floatBottom">
             <div class="relative h-48 overflow-hidden">
               <div class="edu-logo absolute top-2 right-1">
-                <img src="asset/fg boy.png" alt="" width="70" height="70">
+                <img loading="lazy" src="asset/fg boy.png" alt="" width="70" height="70">
               </div>
-              <img src="asset/degree college skardu.jpg" alt="govt. degree college skardu"
+              <img loading="lazy" src="asset/degree college skardu.jpg" alt="govt. degree college skardu"
                 class="w-full h-full object-cover" />
               <div class="absolute inset-0 bg-gradient-to-t from-background to-transparent"></div>
               <div class="absolute bottom-4 left-4">
@@ -817,9 +819,9 @@
           <div class="glass-effect rounded-xl overflow-hidden hover:border-primary/50 hover:shadow-lg floatRight">
             <div class="relative h-48 overflow-hidden">
               <div class="edu-logo absolute top-2 right-1">
-                <img src="asset/psac.png" alt="" width="70" height="70">
+                <img loading="lazy" src="asset/psac.png" alt="" width="70" height="70">
               </div>
-              <img src="asset/psac.jpg" alt="public school & college" class="w-full h-full object-cover" />
+              <img loading="lazy" src="asset/psac.jpg" alt="public school & college" class="w-full h-full object-cover" />
               <div class="absolute inset-0 bg-gradient-to-t from-background to-transparent"></div>
               <div class="absolute bottom-4 left-4">
                 <span class="bg-primary/80 text-white text-xs py-1 px-3 rounded-full backdrop-blur-sm">2014 -
@@ -1173,7 +1175,7 @@
       <div class="container mx-auto px-6">
         <div class="flex flex-col md:flex-row justify-between items-center">
           <div class="mb-4 md:mb-0">
-            <p class="text-gray-400">&copy; 2023 Fahim Rashid. All rights reserved.</p>
+            <p class="text-gray-400">&copy; <span id="currentYear"></span>  Fahim Rashid. All rights reserved.</p>
           </div>
 
           <div class="flex gap-4">
