--- a/index.html
+++ b/index.html
@@ -425,6 +425,11 @@
               <span>Contact Me</span>
               <i class="fas fa-arrow-right"></i>
             </a>
+            <a href="/asset/fahim rashid resume.pdf" download="fahim rashid resume.pdf"
+              class="border border-[grey] bg-[grey] text-white font-medium py-3 px-8 mx-3 rounded-full shadow-lg transition-transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-opacity-50 inline-flex items-center gap-2">
+              <i class="fas fa-download"></i>
+              <span>Download Resume</span>
+            </a>
           </div>
         </div>
 
